feat: allow skipping default reporter creation for new domains via config switch
AM-3442